game with jQuery

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 
         </div>
     </div>
+    <!-- location of the jquery and js files for the game -->
+    <script src = "js/jquery-3.3.1.js"></script>
+    <script src = "js/GuessingGame.js"></script>
 
   </body>
 </html>
+
