check if reset an dhint work

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
           <div>
             <!-- reset and hint buttons -->
-            <button class="btn btn-warning" id="reset">Reset</button>
-            <button class="btn btn-info" id="hint">Hint</button>
+            <button id="reset" class="btn btn-warning" type="reset">Reset</button>
+            <button id="hint" class="btn btn-info" type="hint">Hint</button>
           </div>
         </div>
       </div>
